file adding to folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <!-- Top players and top Blogs -->
         <section>
-            <div class="top-players">
+            <div class="top-players container">
                 <div class="players">
                     <!-- .player*6>img[src="./images/players/player-$.png"]+h3{Top Player $} -->
                     <div class="player">
