--- a/index.html
+++ b/index.html
@@ -48,6 +48,44 @@
                 </div>
             </div>
             <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blog</h2>
+                <div class="blogs">
+                    <!-- article.blog*4>.thumbnail>img[src=".images/blogs/blog-$.png"]^.blog-info>h3.blog-title+p>a -->
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favourite UI/UX Goodies</h3>
+                            <p>
+                                By <a href=""></a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="./images/blogs/blog-2.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title"></h3>
+                            <p><a href=""></a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="./images/blogs/blog-3.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title"></h3>
+                            <p><a href=""></a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="./images/blogs/blog-4.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title"></h3>
+                            <p><a href=""></a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
 </body>
