--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard CSS3</title>
+    <!-- font super icons as Fonts -->
+    <script src="https://kit.fontawesome.com/4e6c12451b.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
@@ -43,7 +45,7 @@
                     </div>
                     <div class="player">
                         <img src="./images/players/player-6.png" alt="">
-                        <h3 class="player-name">Top Player 6</h3>
+                        <h3 class="player-name">Top Players</h3>
                     </div>
                 </div>
             </div>
@@ -51,39 +53,121 @@
             <div class="top-blogs">
                 <h2 class="section-title">Top Blog</h2>
                 <div class="blogs">
-                    <!-- article.blog*4>.thumbnail>img[src=".images/blogs/blog-$.png"]^.blog-info>h3.blog-title+p>a -->
+                    <!-- article.blog*4>.thumbnail>img[src=".images/blogs/blog-$.png"]^.blog-info>h3.blog-title+p.blog-author{By }>a -->
                     <article class="blog">
                         <div class="thumbnail">
                             <img src="./images/blogs/blog-1.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favourite UI/UX Goodies</h3>
-                            <p>
-                                By <a href=""></a>
+                            <p class="blog-author">
+                                By <a href="">Danny Sapio</a>
                             </p>
                         </div>
                     </article>
                     <article class="blog">
-                        <div class="thumbnail"><img src="./images/blogs/blog-2.png" alt=""></div>
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.png" alt="">
+                        </div>
                         <div class="blog-info">
-                            <h3 class="blog-title"></h3>
-                            <p><a href=""></a></p>
+                            <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
+                            <p class="blog-author">By <a href="">Tess Gadd</a></p>
                         </div>
                     </article>
                     <article class="blog">
-                        <div class="thumbnail"><img src="./images/blogs/blog-3.png" alt=""></div>
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.png" alt="">
+                        </div>
                         <div class="blog-info">
-                            <h3 class="blog-title"></h3>
-                            <p><a href=""></a></p>
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By <a href="">Jeremiah Lam</a></p>
                         </div>
                     </article>
                     <article class="blog">
-                        <div class="thumbnail"><img src="./images/blogs/blog-4.png" alt=""></div>
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.png" alt="">
+                        </div>
                         <div class="blog-info">
-                            <h3 class="blog-title"></h3>
-                            <p><a href=""></a></p>
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
                         </div>
                     </article>
+                </div>
+            </div>
+        </section>
+        <!-- Latest Courses -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <!-- .courses>.course*3>.course-banner>img[src="./images/courses/course-$.png"]^.course-info>h3.course-title+p.course-aouthor{} -->
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-info">
+                    <h3 class="course-title">React - The Complete The Complete Guide 2020</h3>
+                        <p class="course-aouthor">Reed Krakoff.</p>
+                        <div class="course-ratings">
+                            <div>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Course</h3>
+                        <p class="course-aouthor">Walter Scott</p>
+                        <div class="course-ratings">
+                            <div>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.3</span>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock"></i>
+                                1:20hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+                        <p class="course-aouthor">Reed Krakoff.</p>
+                        <div class="course-ratings">
+                            <div>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
